# ppheno

./: DBSCAN_plant_detection.py  README.md  export_multi_pc.sh  process_videos2.ps1
clean_pointcloud/: background_removal.py
scripts/: segment_and_rotate.py  volumetric_growth.py
scripts/Downsampling/: 2D_plantnet_results.ipynb  h5_conversion.py  removing_outliers_SOM.py
scripts/colmap/: process_videos.ps1  sft_connect.py
scripts/graphs/: 2D_DON_results.ipynb  2D_projections.py  2D_projections_4x2.py  axis_angle.ipynb  colmap_metrics.csv  colmap_metrics.ipynb  combined_image.ipynb  gt_growth.ipynb  indiv_2D_projections.py  plane_fitting.py  reprojection_error_sfm.ipynb  volumetric_growth.ipynb
scripts/leaf_segmentation/: DBSCAN_leaf_detection.py  DoN_leaf_segmentation.py  Normalized_cuts_graph_clustering.py  Region_growing.py  ScreenCamera_2024-10-11-15-30-25.json  edge_preserving_downsampling.py  gmm_leaf_clustering.py
scripts/leaf_surface/: BPA_surface.py  ScreenCamera_2024-09-27-14-36-47.json  b-spline_surface.py  b_spline_surface.ply  control_points.ply  error.ipynb  error.py  gt_coin.py  gt_leaf_surface.py  nurbs_fitting_script.py  nurbs_surface.py  nurbs_testing.ipynb  poisson.py
scripts/nerfstudio/: export_multi_pc.sh  nerf_multi_training.sh  nerf_multi_training_2.sh
scripts/pc_processing/: Chamfer_distance.py  DBSCAN_knee.py  DBSCAN_plant_detection.py  DBSCAN_plant_detection_folder.py  PCA.py  bounding_box.py  camera_poses.py  colour_filter.py  (+11 more)
scripts/pcl/: CMakeLists.txt  detect_circle.cpp
segmentation/: shape_segmentation.py
src/: open3d.yaml
(+13 files in other folders)
